--- a/app/views/collections/_search_form.html.erb
+++ b/app/views/collections/_search_form.html.erb
@@ -8,7 +8,7 @@
 <%= form_for presenter, method: :get, class: "well form-search" do |f| %>
   <label class="sr-only"><%= t('curation_concerns.collections.search_form.label', title: presenter.to_s) %></label>
   <div class="input-group">
-    <%= text_field_tag :cq, "", class: "collection-query form-control", placeholder: t('curation_concerns.collections.search_form.placeholder'), size: '30', type: "search", id: "collection_search" %>
+    <%= text_field_tag :q, "", class: "collection-query form-control", placeholder: t('curation_concerns.collections.search_form.placeholder'), size: '30', type: "search", id: "collection_search" %>
     <div class="input-group-btn">
       <button type="submit" class="btn btn-primary collection-submit" id="collection_submit"><i class="glyphicon glyphicon-search"></i> Go</button>
     </div>
