--- a/app/views/collections_show/show.html.erb
+++ b/app/views/collections_show/show.html.erb
@@ -63,56 +63,64 @@ The underlying code in stack is a bit of a mess, so this customization seems per
     <%= render 'catalog/constraints' %>
   </div>
 
-  <%# built in sufia collections/sort_and_per_page overrides to some years old Blacklight. We want
-      the normal one we're actually using. %>
-    <%# render 'sort_and_per_page', collection: @presenter %>
-
-    <%# now we just call out to our own overridden catalog/search_header %>
-    <%= render 'search_header' %>
-
-  <%#  replacing `render_document_index @member_docs` %>
-    <%# not sure what some of this is about, but this is extracted from:
-        https://github.com/samvera/sufia/blob/v7.3.0/app/views/collections/_document_list.html.erb
-
-        which ends up being called by `render_document_index` %>
-
-    <% if member_docs.empty? %>
-      <div class="alert alert-warning" role="alert"><%= t('sufia.collection.document_list.no_visible_works') %></div>
-    <% else %>
-      <% if params[:action] == "edit" %>
-        <%= render partial:'my/_index_partials/default_group', locals:{ documents: member_docs, docs:member_docs } %>
-      <% else %>
-        <%# this part we override to render our own thing instead of sufia's thing for results on
-            collection page.
-            Used to be:  `render partial: 'show_document_list', locals:{documents: documents}`, which
-            would be: https://github.com/samvera/sufia/blob/v7.3.0/app/views/collections/_show_document_list.html.erb %>
-        <ul class="list-unstyled collection-items">
-          <%# Don't entirely understand how this works to get the proper partial, but it does,
-              and should work for hetereogenous lists too. Basically taken from sufia
-              https://github.com/samvera/sufia/blob/v7.3.0/app/views/catalog/_document_list.html.erb
-           %>
-          <%= render member_docs, as: :document %>
-        </ul>
-      <% end %>
-    <% end %>
-
-  <%# end replacing `render_document_index @member_docs/ %>
-
-
-
-  <%# copied from our customized catalog/results_pagination, sorry no DRY, it's beyond me at this point %>
-
-  <% if show_pagination? and @response.total_pages > 1 %>
-      <%# expanded will be shown by CSS at large screen sizes, else compact %>
-
-      <div class="pagination pagination-alt-expanded">
-        <%= paginate @response, :window => 3, :outer_window => 1, :theme => 'local' %>
+  <% if member_docs.present? %>
+     <div id="sidebar" class="col-md-3 col-sm-4">
+       <%= render 'facets' %>
       </div>
-
-      <div class="pagination pagination-alt-compact">
-        <%= paginate @response, :page_entries_info => page_entries_info(@response), :theme => 'blacklight_compact' %>
-      </div>
-
   <% end %>
+
+  <div id="content" class="col-md-9 col-sm-8">
+
+    <%# built in sufia collections/sort_and_per_page overrides to some years old Blacklight. We want
+        the normal one we're actually using. %>
+      <%# render 'sort_and_per_page', collection: @presenter %>
+
+      <%# now we just call out to our own overridden catalog/search_header %>
+      <%= render 'search_header' %>
+
+    <%#  replacing `render_document_index @member_docs` %>
+      <%# not sure what some of this is about, but this is extracted from:
+          https://github.com/samvera/sufia/blob/v7.3.0/app/views/collections/_document_list.html.erb
+
+          which ends up being called by `render_document_index` %>
+
+      <% if member_docs.empty? %>
+        <div class="alert alert-warning" role="alert"><%= t('sufia.collection.document_list.no_visible_works') %></div>
+      <% else %>
+        <% if params[:action] == "edit" %>
+          <%= render partial:'my/_index_partials/default_group', locals:{ documents: member_docs, docs:member_docs } %>
+        <% else %>
+          <%# this part we override to render our own thing instead of sufia's thing for results on
+              collection page.
+              Used to be:  `render partial: 'show_document_list', locals:{documents: documents}`, which
+              would be: https://github.com/samvera/sufia/blob/v7.3.0/app/views/collections/_show_document_list.html.erb %>
+          <ul class="list-unstyled collection-items">
+            <%# Don't entirely understand how this works to get the proper partial, but it does,
+                and should work for hetereogenous lists too. Basically taken from sufia
+                https://github.com/samvera/sufia/blob/v7.3.0/app/views/catalog/_document_list.html.erb
+             %>
+            <%= render member_docs, as: :document %>
+          </ul>
+        <% end %>
+      <% end %>
+
+    <%# end replacing `render_document_index @member_docs/ %>
+
+
+
+    <%# copied from our customized catalog/results_pagination, sorry no DRY, it's beyond me at this point %>
+
+    <% if show_pagination? and @response.total_pages > 1 %>
+        <%# expanded will be shown by CSS at large screen sizes, else compact %>
+
+        <div class="pagination pagination-alt-expanded">
+          <%= paginate @response, :window => 3, :outer_window => 1, :theme => 'local' %>
+        </div>
+
+        <div class="pagination pagination-alt-compact">
+          <%= paginate @response, :page_entries_info => page_entries_info(@response), :theme => 'blacklight_compact' %>
+        </div>
+    <% end %>
+  </div>
 
 </div>
