correct euro address per Zack's instructions

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,8 +16,7 @@
       <strong>European Office</strong><br>
       Maison de la Chimie<br>
       28, Rue Saint-Dominique<br>
-      F-75007 Paris<br>
-      France
+      75007 Paris<br>
     </div>
   </div>
 
