--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -131,33 +131,6 @@
         <%= @presenter.attribute_to_html(:additional_credit) %>
     </table>
 
-    <h2 class="attribute-sub-head">Cite As</h2>
-    <div class="show-sub-head-body">
-      <p>
-        <%= citation_for_work( @presenter ) %>
-      </p>
-
-      <p class="btn-group" role="group">
-        <%= link_to main_app.curation_concerns_generic_work_path(@presenter.id, format: "ris"), class: "btn btn-sm btn-primary export-citation" do %>
-          <i class="fa fa-address-card"></i>&nbsp;&nbsp;Export citation (RIS)
-        <% end %>
-        <a class="btn btn-brand-dark btn-sm" tabindex="0" role="button" data-toggle="popover" data-placement="bottom"
-           data-container="body"
-           data-html="true"
-           data-trigger="focus"
-           data-template='<div class="popover popover-citation-help" role="tooltip"><div class="arrow"></div><div class="popover-content"></div></div>'
-           data-content="The RIS format can be imported into most reference management software, including
-            <a target='_blank' href='https://www.zotero.org/'>Zotero</a>,
-            <a target='_blank' href='https://www.mendeley.com/reference-management/reference-manager'>Mendeley</a>,
-            <a target='_blank' href='http://endnote.com/'>EndNote</a>,
-            and <a href='https://www.refworks.com'>Refworks</a>.">
-          <b>?</b>
-        </a>
-      </p>
-
-      <p><i>This citation is automatically generated and may contain errors.</i></p>
-    </div>
-
 
     <h2 class="attribute-sub-head">Physical location</h2>
     <table class="<%= dom_class(@presenter) %> chf-attributes">
@@ -189,6 +162,33 @@
           </tr>
         <% end %>
     </table>
+
+    <h2 class="attribute-sub-head">Cite As</h2>
+    <div class="show-sub-head-body">
+      <p class="citation">
+        <%= citation_for_work( @presenter ) %>
+      </p>
+
+      <p class="btn-group" role="group">
+        <%= link_to main_app.curation_concerns_generic_work_path(@presenter.id, format: "ris"), class: "btn btn-sm btn-primary export-citation" do %>
+          <i class="fa fa-address-card"></i>&nbsp;&nbsp;Export citation (RIS)
+        <% end %>
+        <a class="btn btn-brand-dark btn-sm" tabindex="0" role="button" data-toggle="popover" data-placement="bottom"
+           data-container="body"
+           data-html="true"
+           data-trigger="focus"
+           data-template='<div class="popover popover-citation-help" role="tooltip"><div class="arrow"></div><div class="popover-content"></div></div>'
+           data-content="The RIS format can be imported into most reference management software, including
+            <a target='_blank' href='https://www.zotero.org/'>Zotero</a>,
+            <a target='_blank' href='https://www.mendeley.com/reference-management/reference-manager'>Mendeley</a>,
+            <a target='_blank' href='http://endnote.com/'>EndNote</a>,
+            and <a href='https://www.refworks.com'>Refworks</a>.">
+          <b>?</b>
+        </a>
+      </p>
+
+      <p><i>This citation is automatically generated and may contain errors.</i></p>
+    </div>
 
     <%# TODO get rid of _attribute_rows entirely, no longer using? %>
 
