--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,16 +7,21 @@
   <div class="footerrow">
     <div class="footeraddresses">
       <div class="firstaddress">
-        <strong>Headquarters</strong><br>315 Chestnut Street<br>Philadelphia, PA 19106<br>215.925.2222
+        <strong>Headquarters</strong><br>315 Chestnut Street<br>Philadelphia, PA 19106<br>215.925.2222<br>
+        <a target="_blank" href="https://www.google.com/maps/dir/''/science+history+institute/data=!4m5!4m4!1m0!1m2!1m1!1s0x89c6c884f0010fd7:0x9fdd2fbe5d2744d3?sa=X&ved=0ahUKEwj_mtuCpbrZAhVLs1kKHSpjAicQ9RcIwgEwCw">
+          <i class="fa fa-map-marker"></i> Get Directions
+        </a>
       </div>
       <div class="secondaddress">
-        <strong>West Coast Office</strong><br>2120 University Avenue<br>Berkeley, CA 94704<br>415.798.2104
+        <strong>West Coast Office</strong><br>2120 University Avenue<br>Berkeley, CA 94704<br>
+        <a href="https://www.sciencehistory.org/contact-us">Get in Touch</a>
       </div>
       <div class="thirdaddress">
       <strong>European Office</strong><br>
       Maison de la Chimie<br>
       28, Rue Saint-Dominique<br>
       75007 Paris<br>
+      <a href="https://www.sciencehistory.org/contact-us">Get in Touch</a>
     </div>
   </div>
 
