--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -163,7 +163,7 @@
         <% end %>
     </table>
 
-    <h2 class="attribute-sub-head">Cite As</h2>
+    <h2 class="attribute-sub-head">Cite as</h2>
     <div class="show-sub-head-body">
       <p class="citation">
         <%= citation_for_work( @presenter ) %>
