homepage Browse Collections button keeps space even on tiny screens

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -42,6 +42,7 @@
     text-transform: uppercase;
     border-radius: 0;
     letter-spacing: 0.04em;
+    margin-bottom: $line-height-computed;
   }
 
   .search-container {
