results collapse image/metadata to be over/under on small screens

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -193,16 +193,11 @@
 
     overflow-x: hidden;
 
-    // Browser hyphenization isn't great, but only way to keep really long
-    // words from busting the layout. We'll use it at small sizes.
-    @media (max-width: $grid-float-breakpoint-max) {
-      hyphens: auto;
-      word-wrap: break-word;
-    }
+    $thumb-width: 208px;
 
     .chf-results-list-item-thumb {
-      flex-basis: 208px;
-      width: 208px; // Should match ImageServiceHelper::THUMB_BASE_WIDTHS[:standard]
+      flex-basis: $thumb-width;
+      width: $thumb-width; // Should match ImageServiceHelper::THUMB_BASE_WIDTHS[:standard]
       max-width: 33%; // on smaller screens, more space for text
       margin-right: 28px;
       flex-shrink: 0;
@@ -227,6 +222,34 @@
 
     .chf-results-list-item-content {
       max-width: calc(67% - 28px);
+    }
+
+    // When the screen is too small for thumb + metadata next to each other,
+    // make em over/under.
+    @media (max-width: 1106px) {
+      // Browser hyphenization isn't great, but only way to keep really long
+      // words from busting the layout. We'll use it at small sizes.
+      hyphens: auto;
+      word-wrap: break-word;
+
+      display: block;
+      position: relative;
+
+      .chf-results-list-item-thumb, .chf-results-list-item-content {
+        max-width: 100%;
+      }
+      .chf-results-list-item-content {
+        margin-top: $paragraph-spacer;
+      }
+      .chf-results-list-item-num-members {
+        position: absolute;
+        display: block;
+        text-align: left !important;
+        top: 0;
+        left: $thumb-width + ($line-height-computed / 2);
+        right: 0;
+
+      }
     }
 
     .chf-results-list-item-head {
