--- a/app/assets/stylesheets/local/attribute-table.scss
+++ b/app/assets/stylesheets/local/attribute-table.scss
@@ -14,9 +14,14 @@ $attribute-table-max-tabular: 380px;
   @extend .table-condensed;
   width: 100%;
 
+  @media (max-width: $attribute-table-max-tabular + $grid-float-breakpoint-max) {
+    word-break: break-word;
+    hyphens: auto;
+  }
+
 
   // small, break down table
-  @media (max-width: $attribute-table-min-tabular) {
+  @media (max-width: $attribute-table-max-tabular) {
     table, tbody, thead, td, th {
       display: block;
       width: 100%;
@@ -36,7 +41,7 @@ $attribute-table-max-tabular: 380px;
   }
 
   // At larger sizes, a table for real.
-  @media (min-width: $attribute-table-min-tabular + 1) {
+  @media (min-width: $attribute-table-max-tabular + 1) {
     table-layout: fixed;
     overflow: hidden;
 
