--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -2,7 +2,7 @@
 // be abstracted out into mixins or shared classes.
 
 .work-show {
-  padding: 0 15px;
+  padding: 0;
 
   .show-admin {
     text-align: right;
@@ -28,6 +28,8 @@
 
 
   @media (min-width: $screen-sm-min) {
+    padding: 0 15px;
+
     .show-representative, .show-metadata, .show-title {
       width: 50%;
       padding: 0 15px;
