--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -226,7 +226,8 @@
 
     // When the screen is too small for thumb + metadata next to each other,
     // make em over/under.
-    @media (max-width: 1106px) {
+    $max-results-above-below: 525px;
+    @media (max-width: $max-results-above-below), (min-width: ($grid-float-breakpoint-max + 1)) AND (max-width: $grid-float-breakpoint-max + 1 + $max-results-above-below - 400px) {
       // Browser hyphenization isn't great, but only way to keep really long
       // words from busting the layout. We'll use it at small sizes.
       hyphens: auto;
