--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -50,13 +50,17 @@
 
   <div class="search-options">
 
-     <div class="form-group">
-      <h3>Limit Dates</h3>
-      <label class="sr-only" for="search-option-date-from">From</label>
-      <input type="text" inputmode="numeric" name="range[year_facet_isim][begin]" class="form-control search-option-year" autocomplete="off" placeholder="from" id="search-option-date-from" pattern="[0-9]{3,4}" title="start year (yyyy)">
-      &nbsp;&ndash;&nbsp;
-      <label class="sr-only" for="search-option-date-to">From</label>
-      <input type="text" inputmode="numeric" name="range[year_facet_isim][end]" class="form-control search-option-year"  autocomplete="off" placeholder="to" id="search-option-date-from" pattern="[0-9]{3,4}" title="end year (yyyy)">
+     <div class="form-group limit-dates">
+      <div class="limit-dates-heading">
+        <h3>Limit Dates</h3>
+      </div>
+      <div class="limit-dates-body">
+        <label class="sr-only" for="search-option-date-from">From</label>
+        <input type="text" inputmode="numeric" name="range[year_facet_isim][begin]" class="form-control search-option-year" autocomplete="off" placeholder="from" id="search-option-date-from" pattern="[0-9]{3,4}" title="start year (yyyy)">
+        &nbsp;&ndash;&nbsp;
+        <label class="sr-only" for="search-option-date-to">From</label>
+        <input type="text" inputmode="numeric" name="range[year_facet_isim][end]" class="form-control search-option-year"  autocomplete="off" placeholder="to" id="search-option-date-from" pattern="[0-9]{3,4}" title="end year (yyyy)">
+      </div>
     </div>
 
     <div class="form-group checkbox">
