correct search form padding at small sizes in various parts of the page

--- a/app/assets/stylesheets/local/search_form.scss
+++ b/app/assets/stylesheets/local/search_form.scss
@@ -1,9 +1,18 @@
+// Only when actually in the header (we use it in other places), pad as a menu
+// item when collapsed.
+@media (max-width: $grid-float-breakpoint-max) {
+  .nav .nav-search-form   {
+    padding: $nav-link-padding;
+  }
+}
+
+
 .nav-search-form {
   position: relative;
   margin-bottom: 0;
   max-width: 470px;
   @media (max-width: $grid-float-breakpoint-max) {
-    padding: $nav-link-padding;
+    padding: 10px 0;
     max-width: 100%;
   }
 
