get nav search input to have width we want in FF and IE

--- a/app/assets/stylesheets/local/navbar.scss
+++ b/app/assets/stylesheets/local/navbar.scss
@@ -77,7 +77,7 @@
 
   @media (min-width: $grid-float-breakpoint-max + 1) {
     .navbar-collapse {
-        max-width: 55%;
+        width: 55%;
     }
   }
 
