--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -39,7 +39,7 @@
         </ul><!-- /.nav -->
 
         <% unless content_for(:suppress_controls) %>
-          <div class="nav navbar-nav navbar-right">
+          <div class="nav navbar-nav navbar-right search-form-wrapper">
             <%= render partial: 'catalog/search_form' %>
           </div>
         <% end %>
