--- a/app/assets/stylesheets/local/collection-show.scss
+++ b/app/assets/stylesheets/local/collection-show.scss
@@ -6,6 +6,10 @@
   margin-left: auto;
   margin-right: auto;
 
+  @media (max-width: $grid-float-breakpoint-max) {
+    padding: 0;
+  }
+
   .collection-top {
     display: flex;
     .collection-desc {
