static error page styling tweaks

--- a/app/assets/html/404.html.erb
+++ b/app/assets/html/404.html.erb
@@ -29,8 +29,6 @@
       <div class="collapse navbar-collapse pull-right" id="top-navbar-collapse" role="navigation">
         <div class="masthead-right">
           <h1 class="masthead-title large-masthead-only"><a href="/">Digital Collections</a></h1>
-
-
         </div>
       </div>
 
@@ -40,13 +38,16 @@
 
   <div class="error-body">
     <div class="image-column column">
-      <a href="/works/w3763731m">
+      <a href="/works/w3763731m" class="image-link-wrapper">
         <%= image_tag "404image.jpg", class: "hero-image" %>
+        <div class="caption">
+          Adapted from <i>The Alchemist's Experiment Takes Fire</i>.
+        </div>
       </a>
     </div>
     <div class="text-column column">
-      <h1 class="h2 error-headline">Sorry, that page doesn't exist.</h1>
-      <p class="h3 error-subheadline">But neither does the Philosopher's Stone!</p>
+      <h1 class="h2 error-headline"><i class="fa fa-warning"></i> Sorry, that page doesn't exist.</h1>
+      <p class="h3 error-subheadline">But neither does the Philosopher's Stone. Probably.</p>
 
 
 
