--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -50,7 +50,17 @@
 
       <% if @presenter.has_values_for?(Solrizer.solr_name('date_of_work', :stored_searchable)) %>
         <div class="show-date">
-          <%= @presenter.field_value(Solrizer.solr_name("date_of_work", :stored_searchable), join_type: :list) %>
+          <% if @presenter.date_display_arr.present? %>
+            <ul>
+              <% @presenter.date_display_arr.each do |interval| %>
+                <li>
+                  <span itemprop="date_created">
+                    <%= interval %>
+                  </span>
+                </li>
+              <% end %>
+            </ul>
+          <% end %>
         </div>
       <% end %>
 
