--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -66,7 +66,17 @@
 
       <% if doc_presenter.has_values_for?(Solrizer.solr_name('date_of_work', :stored_searchable)) %>
         <div class="chf-results-list-item-date">
-          <%= doc_presenter.field_value(Solrizer.solr_name("date_of_work", :stored_searchable), join_type: :list) %>
+          <% if doc_presenter.date_display_arr.present? %>
+            <ul>
+              <% doc_presenter.date_display_arr.each do |interval| %>
+                <li>
+                  <span itemprop="date_created">
+                    <%= interval %>
+                  </span>
+                </li>
+              <% end %>
+            </ul>
+          <% end %>
         </div>
       <% end %>
 
