--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -66,9 +66,9 @@
 
       <% if doc_presenter.has_values_for?(Solrizer.solr_name('date_of_work', :stored_searchable)) %>
         <div class="chf-results-list-item-date">
-          <% if doc_presenter.date_display_arr.present? %>
+          <% if doc_presenter.display_dates.present? %>
             <ul>
-              <% doc_presenter.date_display_arr.each do |interval| %>
+              <% doc_presenter.display_dates.each do |interval| %>
                 <li>
                   <span itemprop="date_created">
                     <%= interval %>
@@ -79,6 +79,9 @@
           <% end %>
         </div>
       <% end %>
+
+
+
 
       <% if doc_presenter.has_values_for?(Solrizer.solr_name("description", :stored_searchable)) %>
         <div class="chf-results-list-item-description">
