--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -276,12 +276,23 @@
 .related-work {
   display: flex;
   flex-wrap: wrap;
+  margin-top: $paragraph-spacer;
+  margin-bottom: $paragraph-spacer * 2;
   .related-work-thumb {
     width: 108px;
+    flex-shrink: 0;
     padding-right: $paragraph-spacer;
     img {
       width: 100%;
     }
+  }
+  .related-work-text {
+    flex: 1;
+    align-self: flex-end;
+    min-width: 165px;
+    @extend .h4;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
