--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -329,3 +329,18 @@
   word-break: break-word; // keep long urls from breaking layout, but we don't want ellipsis, so it goes.
 }
 
+.modal.on-demand-download {
+  // magically makes the dialog vertically centered
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .modal-header {
+    background-color: $brand-bright-green;
+    border-top-left-radius: $border-radius-large;
+    border-top-right-radius: $border-radius-large;
+    .modal-title {
+      font-size: 24px;
+    }
+  }
+}
+
