--- a/app/views/admin/fixity/index.html.erb
+++ b/app/views/admin/fixity/index.html.erb
@@ -9,8 +9,8 @@
   <ul>
     <li>Recent checks: <%= @recent_checksum_count %> files have been checked in the past  <%= @how_many_days_back_to_look %> days.</li>
     <li>The most recent fixity checks ran on <%= @most_recent_check_date.iso8601[0..9] %>.</li>
-    <li><%= @unique_checked_files_count %> unique files have been checked.</li>
     <li>The total number of files currently in the repository is <%= @total_files  %>.</li>
+    <li>There are fixity checks on record for a total of <%= @unique_checked_files_count %> unique files.</li>
     <li>The oldest fixity check on record dates from <%= @oldest_check_date.iso8601[0..9] %>. </li>
     <li>All computed checksums match the ones on file.</li>
   </ul>
