--- a/app/views/sufia/admin/_sidebar.html.erb
+++ b/app/views/sufia/admin/_sidebar.html.erb
@@ -32,6 +32,10 @@
       </li>
     </ul>
   </li>
+  <%
+    # TODO: Figure out why this isn't defined in the Curation Concerns admin pages.
+    admin_fixity_index_path = '/admin/fixity'
+  %>
   <li class="<%= 'active' if current_page? admin_fixity_index_path %>">
     <%= link_to admin_fixity_index_path do %>
       <span class="fa fa-check-square-o"></span> <%= t('Fixity checks') %>
