hard-coding admin_fixity_index_path for now. just don't want this breaking in staging.

--- a/app/views/sufia/admin/_sidebar.html.erb
+++ b/app/views/sufia/admin/_sidebar.html.erb
@@ -33,7 +33,7 @@
     </ul>
   </li>
   <%
-    # TODO: Figure out why this isn't defined in the Curation Concerns admin pages.
+    # TODO: Figure out what namespace this is in.
     admin_fixity_index_path = '/admin/fixity'
   %>
   <li class="<%= 'active' if current_page? admin_fixity_index_path %>">
