removing target = _blank

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -39,7 +39,7 @@
   <div class="footerrow">
     <div class="footerprivacycopyright">
       &copy; <%= Time.current.year %>  Science History Institute |
-      <a href="https://www.sciencehistory.org/privacy-policy/" target="_blank" >Privacy Policy</a>
+      <a href="https://www.sciencehistory.org/privacy-policy/" >Privacy Policy</a>
     </div>
   </div>
 </footer>
