--- a/app/views/layouts/chf.html.erb
+++ b/app/views/layouts/chf.html.erb
@@ -75,6 +75,7 @@
       <% end %>
     </div><!-- /#content-wrapper -->
     <%= render 'shared/footer' %>
+    <%= render 'shared/accept_cookies_banner' %>
     <%= render 'shared/ajax_modal' %>
   </body>
 </html>
